# MyChat

./: README.md
client/: CMakeLists.txt  main.cpp  main.qml
client/CNetWork/: netbridge.cpp  netbridge.h
client/Global/: AppState.qml
client/Login/: LoginPage.qml  VerifyPage.qml
client/Main/: LeftPage.qml  MainPage.qml  MarginPage.qml  RightPage.qml
client/MyChat/: CMakeLists.txt  main.cpp  main.qml
client/MyChat/CNetWork/: ErrorCode.h  const.h  netbridge.cpp  netbridge.h  tcpmgr.cpp  tcpmgr.h  usermgr.cpp  usermgr.h
client/MyChat/Global/: AppState.qml
client/MyChat/Login/: EnterPage.qml  LoginPage.qml  VerifyPage.qml
client/MyChat/Main/: LeftPage.qml  MarginPage.qml  RightPage.qml
client/MyChat/Main/LeftClass/: AddFriendPop.qml  ChatClass.qml  ContactClass.qml
client/MyChat/Main/RightClass/: AddFriendRight.qml  ChatRight.qml  ContactRight.qml
email_serve/: config.js  config.json  email.js  proto.js  server.js
email_serve/VerifyServer/: config.json  const.js  proto.js  redis.js  server.js
server/: CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  PropertySheet.props  Singleton.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  const.h
server/ChatServer/: CServer.cpp  CServer.h  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImp.cpp  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.h  MsgNode.h  MysqlMgr.cpp  StatusGrpcClient.h  UserMgr.h  config.ini  const.h
server/ChatServer2/: .gitignore  AsioIOServicePool.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.vcxproj.filters  ChatServiceImp.h  LogicSystem.cpp  MsgNode.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  UserMgr.cpp  config.ini  data.h  message.pb.cc  message.pb.h  message.proto
server/GateServer/: .gitignore  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h
server/StatusServer/: .gitignore  ChatGrpcClient.h  (+15 more)
